# inputstream

./: Cargo.toml  README.md  justfile
.cargo/: config.toml
inputstream/: Cargo.toml
inputstream-client/: Cargo.toml
inputstream-client/src/: config.rs  main.rs
inputstream/src/: config.rs  error.rs  main.rs  senders.rs  server.rs
inputstream/src/event_handlers/: channels.rs  handler.rs  mod.rs
inputstream/src/event_handlers/linux/: gamepad.rs  keyboard.rs  mod.rs  mouse.rs  osu.rs
inputstream/src/event_handlers/windows/: gamepad.rs  keyboard.rs  mod.rs  mouse.rs  osu.rs
lib-inputstream/: Cargo.toml
lib-inputstream/src/: client.rs  consts.rs  error.rs  input_event.rs  key_state.rs  lib.rs  osu_key_args.rs  prelude.rs  server.rs  utils.rs
lib-inputstream/src/event/: difference.rs  gamepad.rs  keyboard.rs  mod.rs  mouse.rs  osu.rs  protocol.rs
lib-inputstream/src/event/gamepad/: absolute_axis.rs  gamepad_button.rs  gamepad_state.rs  mod.rs
lib-inputstream/src/event/keyboard/: linux.rs  mod.rs  named.rs  sdl2.rs
lib-inputstream/src/event/mouse/: linux.rs  mod.rs
lib-inputstream/src/key_group/: key_group_bitmask.rs  keyboard_key_group1.rs  keyboard_key_group2.rs  keyboard_key_group3.rs  mod.rs
