[package]
name = "inputstream-client"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
lib-inputstream = { path = "../lib-inputstream", features = ["sdl2"] }
sdl2 = "0.36.0"
