[package]
name = "inputstream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib-inputstream = { path = "../lib-inputstream" }
clap = { version = "4.5.1", features = ["derive"] }

[target.x86_64-unknown-linux-gnu.dependencies]
evdev = "0.12.1"