[package]
name = "inputstream"
version = "0.2.0"
edition = "2021"

# see more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib-inputstream = { path = "../lib-inputstream" }
clap = { version = "4.5.1", features = ["derive"] }

[target.x86_64-unknown-linux-gnu.dependencies]
evdev = "0.12.1"

[target.x86_64-pc-windows-gnu.dependencies]
winapi = { version = "0.3.9", features = ["winuser"] }
