[package]
name = "lib-inputstream"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { version = "0.36.0", optional = true }

[target.x86_64-unknown-linux-gnu.dependencies]
evdev = "0.12.1"

[target.x86_64-pc-windows-gnu.dependencies]
winapi = { version = "0.3.9", features = ["winuser"] }

[features]
sdl2 = ["dep:sdl2"]